SLT_Handler/Include/MMC/MMMCWHP220.h

//2011.06.30 VER 200
INT API HardwareReset(INT Board);
INT API option_fpga_version_chk(INT bn, pINT ver);
INT API set_option_io(INT port, LONG value);
INT API get_option_io(INT port, pLONG value);
INT API get_option_out_io(INT port, pLONG value);
INT API set_option_bit(INT bitNo);
INT API reset_option_bit(INT bitNo);
// 2010.08.13 SKKang
INT API get_option_io_bit(INT port, INT bit, pINT status);
INT API get_option_out_io_bit(INT port, INT bit, pINT status);
INT API get_sync_map_axes(pINT Master, pINT Slave);//2010.11.08 skkang
/* by rolstone -- Ver 1.2 : Reset position_compare function */ 
INT API position_compare_reset(INT bn);
INT API position_compare_init(INT index_sel, INT ax1, INT ax2);
INT API position_compare_read(INT index_sel, INT ax, pDOUBLE pos);
INT API position_compare_bit(INT bdNum, INT bitNum, INT OnOff);
INT API spl_arc_deg_move2(DOUBLE x_center, DOUBLE y_center, pDOUBLE pnt, DOUBLE vel, INT acc, INT cdir);
INT API spl_arc_deg_move3(DOUBLE x_center, DOUBLE y_center, pDOUBLE pnt, DOUBLE vel, INT acc, INT cdir);
INT API spl_arc_deg_move2ax(INT ax1, INT ax2, DOUBLE x_center, DOUBLE y_center, pDOUBLE pnt, DOUBLE vel, INT acc, INT cdir);
INT API spl_arc_deg_move3ax(INT ax1, INT ax2, INT ax3, DOUBLE x_center, DOUBLE y_center, pDOUBLE pnt, DOUBLE vel, INT acc, INT cdir);
INT API spl_arc_deg_movenax(INT len, pINT ax, DOUBLE x_center, DOUBLE y_center, pDOUBLE pnt, DOUBLE vel, INT acc, INT cdir);
INT API spl_auto_arc_deg_move2ax(INT ax1, INT ax2, DOUBLE x_center, DOUBLE y_center, pDOUBLE pnt, DOUBLE vel, INT acc, INT cdir, INT auto_flag);
INT API spl_auto_arc_deg_move3ax(INT ax1, INT ax2, INT ax3, DOUBLE x_center, DOUBLE y_center, pDOUBLE pnt, DOUBLE vel, INT acc, INT cdir, INT auto_flag);
INT API spl_auto_arc_deg_movenax(INT len, pINT ax, DOUBLE x_center, DOUBLE y_center, pDOUBLE pnt, DOUBLE vel, INT acc, INT cdir, INT auto_flag);
INT API arc_3(DOUBLE x_center, DOUBLE y_center, DOUBLE angle, pDOUBLE pos);
INT API arc_3ax(INT ax1, INT ax2, INT ax3, DOUBLE x_center, DOUBLE y_center, DOUBLE angle, pDOUBLE pos, DOUBLE vel, INT acc);
INT API set_encoder_filter_num(INT ax, INT fn);
INT API fset_encoder_filter_num(INT ax, INT fn);
INT API get_encoder_filter_num(INT ax, pINT fn);
INT API fget_encoder_filter_num(INT ax, pINT fn);
INT	API	get_mmc_init_chkx();
INT	API	set_mmc_init_chkx(INT bn, INT val);
INT API spl_line_move1(pDOUBLE pnt, DOUBLE vel, INT acc);
INT API spl_line_move1ax(INT ax1, pDOUBLE pnt, DOUBLE vel, INT acc);
INT API spl_auto_line_move1ax(INT ax1, pDOUBLE pnt, DOUBLE vel, INT acc, INT auto_flag);
INT API position_compare_interval(INT dir, INT ax, INT bitNo, DOUBLE startpos, DOUBLE limitpos, LONG interval, LONG time);
INT API set_control_timer_ax(INT ax, DOUBLE time);
INT API fset_control_timer_ax(INT ax, DOUBLE time);
INT API get_control_timer_ax(INT ax, pDOUBLE time);
INT API fget_control_timer_ax(INT ax, pDOUBLE time);
INT API position_io_onoff(INT pos_num, INT bitNo, INT ax, DOUBLE pos, INT encflag);
INT API position_io_allclear(INT ax);
INT API position_io_clear(INT ax, INT pos_num);
INT API set_friction_gain(INT ax, LONG gain);
INT API fset_friction_gain(INT ax, LONG gain);
INT API get_friction_gain(INT ax, pLONG gain);
INT API fget_friction_gain(INT ax, pLONG gain);
INT API set_friction_range(INT axno, DOUBLE range);
INT API fset_friction_range(INT axno, DOUBLE range);
INT API get_friction_range(INT axno, pDOUBLE range);
INT API fget_friction_range(INT axno, pDOUBLE range);
INT API set_system_io(INT ax, INT onoff);
INT API get_system_io(INT ax, pINT onoff);
INT API set_amp_resolution32(INT ax, LONG resolution);
INT API fset_amp_resolution32(INT ax, LONG resolution);
INT API get_amp_resolution32(INT ax, pLONG resolution);
INT API fget_amp_resolution32(INT ax, pLONG resolution);
INT API set_collision_prevent_ax(INT ax, INT enable, INT slave_ax, INT add_sub, INT non_equal, DOUBLE c_pos, INT type);
INT API get_collision_prevent_ax(INT ax, pINT enable);
INT API set_sync_control_ax(INT ax, INT enable, INT master_ax, LONG gain);
INT API get_sync_control_ax(INT ax, pINT enable, pINT master_ax, pLONG gain);
INT API set_pause_control(INT bn, INT enable, LONG io_bit);
INT API get_collision_position(INT ax, pDOUBLE position);
INT API get_teachposition(INT ax, pDOUBLE position);
INT API set_mpg_velocity(INT ax,INT mpg_vel);
INT API get_mpg_velocity(INT ax,pINT mpg_vel);
INT API set_mpg_enable(INT ax, INT state);
INT API get_mpg_enable(INT ax, pINT state);
INT API set_enc_open_check_para(INT bdNum, INT analog_ref, INT count_ref, INT tolerance);
INT API get_enc_open_check_para(INT bdNum, pINT analog_ref, pINT count_ref, pINT tolerance);
INT API set_mpg_quarter_counter(INT ax,INT state);