SLT_Handler/Include/MMC/MMCWHP220.bas


Declare Function spl_arc_deg_move2 Lib "MMCWHP220.dll" (ByVal x_center As Double, ByVal y_center As Double, pnt As Double, ByVal vel As Double, ByVal acc As Integer, ByVal cdir As Integer) As Integer
Declare Function spl_arc_deg_move3 Lib "MMCWHP220.dll" (ByVal x_center As Double, ByVal y_center As Double, pnt As Double, ByVal vel As Double, ByVal acc As Integer, ByVal cdir As Integer) As Integer

Declare Function spl_arc_deg_move2ax Lib "MMCWHP220.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal x_center As Double, ByVal y_center As Double, pnt As Double, ByVal vel As Double, ByVal acc As Integer, ByVal cdir As Integer) As Integer
Declare Function spl_arc_deg_move3ax Lib "MMCWHP220.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer, ByVal x_center As Double, ByVal y_center As Double, pnt As Double, ByVal vel As Double, ByVal acc As Integer, ByVal cdir As Integer) As Integer
Declare Function spl_arc_deg_movenax Lib "MMCWHP220.dll" (ByVal nlen As Integer, ax As Integer, ByVal x_center As Double, ByVal y_center As Double, pnt As Double, ByVal vel As Double, ByVal acc As Integer, ByVal cdir As Integer) As Integer

Declare Function spl_auto_arc_deg_move2ax Lib "MMCWHP220.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal x_center As Double, ByVal y_center As Double, pnt As Double, ByVal vel As Double, ByVal acc As Integer, ByVal cdir As Integer, ByVal auto_flag As Integer) As Integer
Declare Function spl_auto_arc_deg_move3ax Lib "MMCWHP220.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer, ByVal x_center As Double, ByVal y_center As Double, pnt As Double, ByVal vel As Double, ByVal acc As Integer, ByVal cdir As Integer, ByVal auto_flag As Integer) As Integer
Declare Function spl_auto_arc_deg_movenax Lib "MMCWHP220.dll" (ByVal nlen As Integer, ax As Integer, ByVal x_center As Double, ByVal y_center As Double, pnt As Double, ByVal vel As Double, ByVal acc As Integer, ByVal cdir As Integer, ByVal auto_flag As Integer) As Integer

Declare Function arc_3 Lib "MMCWHP220.dll" (ByVal x_center As Double, ByVal y_center As Double, ByVal angle As Double, pos As Double) As Integer
Declare Function arc_3ax Lib "MMCWHP220.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer, ByVal x_center As Double, ByVal y_center As Double, ByVal angle As Double, pos As Double, ByVal vel As Double, ByVal acc As Integer) As Integer

Declare Function set_encoder_filter_num Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal fn As Integer) As Integer
Declare Function fset_encoder_filter_num Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal fn As Integer) As Integer
Declare Function get_encoder_filter_num Lib "MMCWHP220.dll" (ByVal ax As Integer, fn As Integer) As Integer
Declare Function fget_encoder_filter_num Lib "MMCWHP220.dll" (ByVal ax As Integer, fn As Integer) As Integer
Declare Function get_mmc_init_chkx Lib "MMCWHP220.dll" () As Integer
Declare Function set_mmc_init_chkx Lib "MMCWHP220.dll" (ByVal bn As Integer, ByVal val As Integer) As Integer

Declare Function spl_line_move1 Lib "MMCWHP220.dll" (pntx As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function spl_line_move1ax Lib "MMCWHP220.dll" (ByVal ax As Integer, pntx As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function spl_auto_line_move1ax Lib "MMCWHP220.dll" (ByVal ax As Integer, pntx As Double, ByVal vel As Double, ByVal acc As Integer, ByVal AutoOffFlag As Integer) As Integer

Declare Function position_compare_interval Lib "MMCWHP220.dll" (ByVal Dir As Integer, ByVal ax As Integer, ByVal bitNo As Integer, ByVal startpos As Double, ByVal limitpos As Double, ByVal interval As Long, ByVal time As Long) As Integer
Declare Function set_control_timer_ax Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal time As Double) As Integer
Declare Function fset_control_timer_ax Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal time As Double) As Integer
Declare Function get_control_timer_ax Lib "MMCWHP220.dll" (ByVal ax As Integer, time As Double) As Integer
Declare Function fget_control_timer_ax Lib "MMCWHP220.dll" (ByVal ax As Integer, time As Double) As Integer

Declare Function position_io_onoff Lib "MMCWHP220.dll" (ByVal pos_num As Integer, ByVal bitNo As Integer, ByVal ax As Integer, ByVal pos As Double, ByVal encflag As Integer) As Integer
Declare Function position_io_allclear Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer
Declare Function position_io_clear Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal pos_num As Integer) As Integer

Declare Function set_friction_gain Lib "MMCWHP220.dll" (ByVal Axis As Integer, ByVal gain As Long) As Integer
Declare Function fset_friction_gain Lib "MMCWHP220.dll" (ByVal Axis As Integer, ByVal gain As Long) As Integer
Declare Function get_friction_gain Lib "MMCWHP220.dll" (ByVal Axis As Integer, gain As Long) As Integer
Declare Function fget_friction_gain Lib "MMCWHP220.dll" (ByVal Axis As Integer, gain As Long) As Integer
Declare Function set_friction_range Lib "MMCWHP220.dll" (ByVal axno As Integer, ByVal range As Double) As Integer
Declare Function fset_friction_range Lib "MMCWHP220.dll" (ByVal axno As Integer, ByVal range As Double) As Integer
Declare Function get_friction_range Lib "MMCWHP220.dll" (ByVal axno As Integer, range As Double) As Integer
Declare Function fget_friction_range Lib "MMCWHP220.dll" (ByVal axno As Integer, range As Double) As Integer

Declare Function set_mpg_velocity Lib "MMCWHP220.dll" (ByVal bdNum As Integer, ByVal mpg_vel As Integer) As Integer
Declare Function get_mpg_velocity Lib "MMCWHP220.dll" (ByVal bdNum As Integer, mpg_vel As Integer) As Integer
Declare Function set_mpg_enable Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal state As Integer) As Integer
Declare Function get_mpg_enable Lib "MMCWHP220.dll" (ByVal ax As Integer, state As Integer) As Integer

Declare Function set_enc_open_check_para Lib "MMCWHP220.dll" (ByVal bdNum As Integer, ByVal analog_ref As Integer, ByVal count_ref As Integer, ByVal tolerance As Integer) As Integer
Declare Function get_enc_open_check_para Lib "MMCWHP220.dll" (ByVal bdNum As Integer, analog_ref As Integer, count_ref As Integer, tolerance As Integer) As Integer
Declare Function set_mpg_quarter_counter Lib "MMCWHP220.dll" (ByVal state As Integer) As Integer

Declare Function set_system_io Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal OnOff As Integer) As Integer
Declare Function get_system_io Lib "MMCWHP220.dll" (ByVal ax As Integer, OnOff As Integer) As Integer
Declare Function set_amp_resolution32 Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal resolution As Long) As Integer
Declare Function fset_amp_resolution32 Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal resolution As Long) As Integer
Declare Function get_amp_resolution32 Lib "MMCWHP220.dll" (ByVal ax As Integer, resolution As Long) As Integer
Declare Function fget_amp_resolution32 Lib "MMCWHP220.dll" (ByVal ax As Integer, resolution As Long) As Integer

Declare Function set_collision_prevent_ax Lib "MMCWHP220.dll" (ByVal ax As Integer, enable As Integer, slave_ax As Integer, add_sub As Integer, non_equal As Integer, c_pos As Double, TP As Integer) As Integer
Declare Function get_collision_prevent_ax Lib "MMCWHP220.dll" (ByVal ax As Integer, enable As Integer) As Integer

Declare Function set_sync_control_ax Lib "MMCWHP220.dll" (ByVal ax As Integer, enable As Integer, master_ax As Integer, ByVal gain As Long) As Integer
Declare Function get_sync_control_ax Lib "MMCWHP220.dll" (ByVal ax As Integer, enable As Integer, master_ax As Integer, ByRef gain As Long) As Integer

Declare Function set_pause_control Lib "MMCWHP220.dll" (ByVal bn As Integer, enable As Integer, io_bit As Long) As Integer
Declare Function get_collision_position Lib "MMCWHP220.dll" (ByVal ax As Integer, position As Double) As Integer
Declare Function get_teachposition Lib "MMCWHP220.dll" (ByVal ax As Integer, position As Double) As Integer

Declare Function position_compare_reset Lib "MMCWHP220.dll" (ByVal index As Integer) As Integer
Declare Function position_compare_init Lib "MMCWHP220.dll" (ByVal index As Integer, ax1 As Integer, ax2 As Integer) As Integer
Declare Function position_compare_read Lib "MMCWHP220.dll" (ByVal index As Integer, ax As Integer, pos As Double) As Integer
Declare Function position_compare_bit Lib "MMCWHP220.dll" (ByVal bdNum As Integer, bitNum As Integer, OnOff As Integer) As Integer

Declare Function set_option_io Lib "MMCWHP220.dll" (ByVal port As Integer, ByVal value As Long) As Integer
Declare Function get_option_io Lib "MMCWHP220.dll" (ByVal port As Integer, value As Long) As Integer
Declare Function get_option_out_io Lib "MMCWHP220.dll" (ByVal port As Integer, value As Long) As Integer
' 1.51 added 2010.08.13
Declare Function get_option_io_bit Lib "MMCWHP220.dll" (ByVal port As Integer, ByVal bit As Integer, status As Integer) As Integer
' 1.51 added 2010.08.27
Declare Function get_option_out_io_bit Lib "MMCWHP220.dll" (ByVal port As Integer, ByVal bit As Integer, status As Integer) As Integer

Declare Function set_option_bit Lib "MMCWHP220.dll" (ByVal bitNo As Integer) As Integer
Declare Function reset_option_bit Lib "MMCWHP220.dll" (ByVal bitNo As Integer) As Integer

Declare Function option_fpga_version_chk Lib "MMCWHP220.dll" (ByVal bn As Integer, ByRef ver As Integer) As Integer
Declare Function HardwareReset Lib "MMCWHP220.dll" (ByVal bn As Integer) As Integer
Declare Function get_sync_map_axes Lib "MMCWHP220.dll" (ByRef Master As Integer, ByRef Slave As Integer) As Integer

